# rv1126_ffmpeg

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_ffmpeg.sh  rkipc-demo.ini  run.sh  开发板运行日志.txt  调试命令.txt  运行结果.txt
docs/: 3rdparty说明.md  FFmpeg获取指导.md  MIPI与USB摄像头区别.md  OSD功能说明.md  PDF_分析.md  RGA功能说明.md  RTC说明.md  RTSP集成说明.md  RV1126摄像头调试指南.md  SDK分析.md  ffmpeg_setup_guide.md  快速开始.md  性能监控说明.md  流媒体架构与数据流.md  目标.txt  项目计划.md
include/capture/: video_capture.h
include/common/: config.h  version.h
include/config/: config.h
main/: main.c
main/config/: config.c  config.h
main/monitor/: perf_monitor.c  perf_monitor.h
main/video/: README.md  frame_queue.c  frame_queue.h  rga_utils.c  rga_utils.h  video.c  video.h  video_osd.c  video_osd.h
script/: RkLunch.sh  rkipc-gc2053.ini  说明.txt
src/: config.c  main.c
src/capture/: video_capture.c
src/common/: config.c  来源.txt
src/common/isp/: 来源.txt
src/streamer/: streamer_test.c
